--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!-- 폰트 -->
     <link rel="stylesheet" href="https://use.typekit.net/fhr4ovo.css">
     <!-- Goggle Material icon -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!-- css -->
     <link rel="stylesheet" href="css/index.css">
 
     <!-- swiper -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!-- scroll Magic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"
@@ -103,7 +103,7 @@
             <nav id="gnb-mo">
                 <div class="search">
                     <input id="search-search" type="search" name="q" aria-label="Search through site content">
-                    <button><a href="javascript:void(0)"><img src="images/icon/search-mo.png" alt="search"></a></button>
+                    <a href="javascript:void(0)"><button><img src="images/icon/search-mo.png" alt="search"></button></a>
                 </div>
                 <ul class="mainMenu">
                     <!-- 1차메뉴 (:target 사용) -->
@@ -202,6 +202,7 @@
 
         <!-- brand-text -->
         <section class="brand-text">
+            <h2 class="hidden">brand-text</h2>
             <div class="inner">
                 <img src="images/img/txt-mo.png" alt="brand" class="brand-text-mo">
                 <img src="images/img/txt-pc.png" alt="brand" class="brand-text-pc">
@@ -214,8 +215,8 @@
         <section class="best-item scroll-spy">
             <div class="item-bg back-to-position to-up delay-0">
                 <h2>
-                    <img src="images/items/best item-txt-mo.png" alt="best-items" class="item-h2-mo">
-                    <img src="images/items/best item-txt-pc.png" alt="best-items" class="item-h2-pc">
+                    <img src="images/items/best_item-txt-mo.png" alt="best-items" class="item-h2-mo">
+                    <img src="images/items/best_item-txt-pc.png" alt="best-items" class="item-h2-pc">
                 </h2>
 
                 <div class="best-item__inner">
