--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                         <p>네이키드 머스크 103</p>
                                         <p>Solid Perfume</p>
                                         <p>34,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -244,7 +244,7 @@
                                         <p>잇 더 피치</p>
                                         <p>Eau de Parfum</p>
                                         <p>59,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -257,7 +257,7 @@
                                         <p>솔리드 퍼퓸 트라이 키트</p>
                                         <p>Solid Perfume</p>
                                         <p>2,000원</p>
-                                        <diiv href="javascript:void(0)" class="btn btn--item">ADD TO CART</diiv>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -270,7 +270,7 @@
                                         <p>네이키드 샌달우드</p>
                                         <p>Solid Perfume</p>
                                         <p>34,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -283,7 +283,7 @@
                                         <p>보이드 우드</p>
                                         <p>Eau de Parfum</p>
                                         <p>59,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -296,7 +296,7 @@
                                         <p>히노키 207</p>
                                         <p>Room Spray</p>
                                         <p>32,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
@@ -309,7 +309,7 @@
                                         <p>레이어링 퍼퓸 세트</p>
                                         <p>　</p>
                                         <p>93,000원</p>
-                                        <div href="javascript:void(0)" class="btn btn--item">ADD TO CART</div>
+                                        <div class="btn btn--item">ADD TO CART</div>
                                     </div>
                                 </a>
                             </div>
